In progress, next step is to finetune the model and tweak the parameters

--- a/form-data.ipynb
+++ b/form-data.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import numpy as np\n",
     "import json\n",
-    "import re"
+    "import re\n",
+    "import gpt_2_simple as gpt2"
    ]
   },
   {
@@ -218,15 +230,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Restart Notebook:</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint checkpoint/run1/model-1\n",
+      "INFO:tensorflow:Restoring parameters from checkpoint/run1/model-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = gpt2.start_tf_sess()\n",
+    "gpt2.load_gpt2(sess)\n",
+    "#preds = gpt2.generate(sess,run_name='run1', return_as_list=True)[0]\n",
+    "#print(preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#'sess = gpt2.start_tf_sess()\n",
-    "#gpt2.load_gpt2(sess)\n",
-    "\n",
-    "gpt2.generate(sess)"
+    "preds = gpt2.generate(sess,run_name='run1', return_as_list=True)[0]"
    ]
   },
   {
@@ -234,9 +271,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "gpt2.generate(sess, return_as_list=True)[0]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
