--- a/gather_lyrics.ipynb
+++ b/gather_lyrics.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Imports:</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -17,7 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Load Credentials:</h4>"
+    "<h4>Load Credentials:</h4>\n",
+    "<p>We have a config csv file that has the stored credentials consiting of the client_id, client_secret, and the access token. We load these into a dataframea and then extract their values.</p>"
    ]
   },
   {
@@ -1050,11 +1058,11 @@
     "    #'Blac Youngsta', \n",
     "    #'Young Thug', \n",
     "    #'Lil Keed', \n",
-    "    'YG', \n",
-    "    'Moneybagg Yo',  \n",
-    "    'BlocBoy JB',  \n",
-    "    'Z Money', \n",
-    "    'Kodak Black', \n",
+    "    #'YG', \n",
+    "    #'Moneybagg Yo',  \n",
+    "    #'BlocBoy JB',  \n",
+    "    #'Z Money', \n",
+    "    #'Kodak Black', \n",
     "    'Lil Uzi Vert', \n",
     "    'Juice World', \n",
     "    'Young Nudy', \n",
